--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -66,11 +66,55 @@ body, html {
         flex-direction: column;
         flex-wrap: nowrap;
         order: -1;
+        max-height: 70vh;
+        justify-content: flex-start;
+        padding: 0;
+       
     }
     .thumbnails-title {
-        width: 20vw;
+        width: 12vw;
+        font-size: 1rem;
+        height: 3vw;
     }
     .thumbnails-item {
-        max-width: 20vw;
+        max-width: 12vw;
+        margin-left:0;
+        border-radius:25%;
+        overflow:hidden;
+        min-height: 13vw;
+    }
+    .thumbnails-image {
+        width: 12vw;
+        height: 10vw;
+
+    }
+    .details-image {
+        width: 60vw;
+        height: 43vw;
+    }
+    .details-title {
+        left: -4vw;
+        bottom: 2vw
+        
+    }
+    .main-content {
+        display: flex;
+         justify-content: space-around; 
+        
+        
+    }
+    .details-container {
+        justify-content: center;
+        
+    }
+    body {
+       
+        justify-content: space-between;
+        margin: 0;
+    }
+    .logo-title {
+        margin: 0;
+        font-size: 1.5rem;
+        
     }
 }
