cw #6 variables, calculations, fonts

--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -1,14 +1,32 @@
+@font-face {
+    font-family: lakeshor;
+    src: url("fonts/LAKESHOR-webfont.svg");
+    src: url("fonts/LAKESHOR-webfont.woff");
+}
+@font-face {
+    font-family: airstream;
+    src: url("fonts/Airstream-webfont.svg");
+    src: url("fonts/Airstream-webfont.woff");
+}
+:root {
+    --thumbnails-image-width: 20vw;
+    --thumbnails-image-height: 18vw;
+    --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.33);
+}
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0;
+    background-color: darkseagreen;
     /* align-items: center; */
 }
+
 .thumbnails-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-height: 25vh;
+    max-height: 35vh;
     overflow-y: auto;
     justify-content: space-around;
     list-style: none;
@@ -16,19 +34,22 @@ body {
     padding-top: 2.5vh;
 }
 .thumbnails-image {
-    width: 20vw;
-    height: 18vw;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-image-height);
     display:block
 }
 .details-title {
     background-color: cornsilk;
     position: absolute;
     left: 3vw;
-    bottom: 2vw
+    bottom: 2vw;
+    font-family: airstream;
+    font-style: italic;
 }
 .details-image {
-    width: 60vw;
-    height: 55vw
+    width: 70vw;
+    height: 60vw;
+    border-radius: 25%;
 }
 .details-container {
     position: relative;
@@ -42,11 +63,17 @@ body {
     background-color: beige;
     color: blue;
     font-size: 1.2rem;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-title-height);
 }
 .thumbnails-item {
     margin-top: 2vh;
     margin-left: 2vw;
     border: 1px solid blue;
+    max-width: var(--thumbnails-image-width);
+    min-height: calc(var(--thumbnails-image-height) + var(--thumbnails-title-height));
+    border-radius: 25%;
+    overflow: hidden
 }
 .thumbnails-anchor {
     text-decoration: none;
@@ -57,11 +84,18 @@ body {
     font-size: 2rem;
     text-align: center;
    text-transform: uppercase;
+   margin: 0;
+   font-family: lakeshor;
 }
 body, html {
     height: 100%
 }
 @media (min-width: 568px){
+    :root {
+        --thumbnails-image-width: 12vw;
+        --thumbnails-image-height: 10vw;
+        --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.25);
+    }
     .thumbnails-list {
         flex-direction: column;
         flex-wrap: nowrap;
@@ -69,25 +103,26 @@ body, html {
         max-height: 70vh;
         justify-content: flex-start;
         padding: 0;
+        margin: 0;
        
     }
     .thumbnails-title {
-        width: 12vw;
+        
         font-size: 1rem;
-        height: 3vw;
+        
     }
     .thumbnails-item {
-        max-width: 12vw;
+      
         margin-left:0;
-        border-radius:25%;
+       
         overflow:hidden;
-        min-height: 13vw;
+       
+        margin-top:0;
     }
-    .thumbnails-image {
-        width: 12vw;
-        height: 10vw;
-
+    .thumbnails-item+.thumbnails-item {
+        margin-top: 2vh;
     }
+    
     .details-image {
         width: 60vw;
         height: 43vw;
